tests/should_succeed/specification/logic_call.coma
module M_dummy
  use creusot.int.UInt32
  use creusot.prelude.Any
  
  predicate reflexive_u32 (x: UInt32.t) = x = x
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec dummy (return (x: UInt32.t)) = (! bb0
    [ bb0 = s0 [ s0 = [ &_ret <- (0: UInt32.t) ] s1 | s1 = return {_ret} ] ] [ & _ret: UInt32.t = Any.any_l () ])
    [ return (result: UInt32.t) -> {[@expl:dummy ensures] reflexive_u32 result} (! return {result}) ]
end
