tests/should_fail/bug/2054-b.coma
module M_g
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  constant const_N : UInt64.t
  
  type tup2_usize_bool = { f0: UInt64.t; f1: bool }
  
  constant const_N'0 : UInt64.t
  
  let rec set_N (return) = bb0
    [ bb0 = s0
      [ s0 = bb0'0
        [ bb0'0 = s0'0
          [ s0'0 = [ &_1 <- let (_fst, _snd) = UInt64.add_with_overflow const_N (1: UInt64.t) in { f0 = _fst;
                                                                                                   f1 = _snd } ] s1'0
          | s1'0 = {[@expl:Add overflow] not _1.f1} s2
          | s2 = [ &_ret'0 <- _1.f0 ] s3
          | s3 = _const_ret {_ret'0} ] ] [ & _ret'0: UInt64.t = Any.any_l () | & _1: tup2_usize_bool = Any.any_l () ]
        [ _const_ret (_const: UInt64.t) -> [ &_ret <- _const ] s1 ]
      | s1 = return {_ret} ] ] [ & _ret: UInt64.t = Any.any_l () ]
    [ return (_const: UInt64.t) -> -{const_N'0 = _const}- return ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec g_T (return (x: UInt64.t)) = (! set_N
      (bb0
      [ bb0 = s0 [ s0 = [ &_ret <- const_N'0 ] s1 | s1 = return {_ret} ] ] [ & _ret: UInt64.t = Any.any_l () ]))
    [ return (result: UInt64.t) -> {[@stop_split] [@expl:g ensures] result <> (0: UInt64.t)} (! return {result}) ]
end
module M_gl
  use creusot.int.UInt64
  use creusot.prelude.Any
  
  constant const_N : UInt64.t
  
  type tup2_usize_bool = { f0: UInt64.t; f1: bool }
  
  constant const_N'0 : UInt64.t
  
  let rec set_N (return) = bb0
    [ bb0 = s0
      [ s0 = bb0'0
        [ bb0'0 = s0'0
          [ s0'0 = [ &_1 <- let (_fst, _snd) = UInt64.add_with_overflow const_N (1: UInt64.t) in { f0 = _fst;
                                                                                                   f1 = _snd } ] s1'0
          | s1'0 = {[@expl:Add overflow] not _1.f1} s2
          | s2 = [ &_ret'0 <- _1.f0 ] s3
          | s3 = _const_ret {_ret'0} ] ] [ & _ret'0: UInt64.t = Any.any_l () | & _1: tup2_usize_bool = Any.any_l () ]
        [ _const_ret (_const: UInt64.t) -> [ &_ret <- _const ] s1 ]
      | s1 = return {_ret} ] ] [ & _ret: UInt64.t = Any.any_l () ]
    [ return (_const: UInt64.t) -> -{const_N'0 = _const}- return ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  function gl_T : UInt64.t
  
  let rec vc_gl_T (return) = (! set_N (ret))
    [ ret -> {[@stop_split] [@expl:gl ensures] const_N'0 <> (0: UInt64.t)} (! return) ]
end
